# ChangeLog for app-arch/libarchive
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.6 2007/11/04 17:54:42 flameeyes Exp $

*libarchive-2.4.0 (04 Nov 2007)

  04 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -libarchive-2.2.5.ebuild, -libarchive-2.3.3.ebuild,
  -libarchive-2.3.4.ebuild, +libarchive-2.4.0.ebuild:
  Version bump, and cleanup of old ebuilds.

*libarchive-2.3.5 (29 Oct 2007)

  29 Oct 2007; Roy Marples <uberlord@gentoo.org> +libarchive-2.3.5.ebuild:
  Bump and enable bsdcpio.

*libarchive-2.3.4 (10 Oct 2007)

  10 Oct 2007; Roy Marples <uberlord@gentoo.org> +libarchive-2.3.4.ebuild:
  Bump

*libarchive-2.3.3 (04 Oct 2007)

  04 Oct 2007; <drizzt@gentoo.org> +libarchive-2.3.3.ebuild:
  Version bump

*libarchive-2.2.5 (14 Jul 2007)

  14 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +libarchive-2.2.5.ebuild:
  Version bump.

  13 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.1.5-acl.patch, +files/libarchive-2.1.9-static.patch,
  +metadata.xml, +libarchive-2.2.4.ebuild:
  Add libarchive.

*libarchive-2.2.4 (13 Jul 2007)

  13 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.1.5-acl.patch, +files/libarchive-2.1.9-static.patch,
  +metadata.xml, +libarchive-2.2.4.ebuild:
  Move app-arch/bsdtar to app-arch/libarchive

  13 Jul 2007; Steve Dibb <beandog@gentoo.org> bsdtar-2.2.4.ebuild:
  amd64 stable, security bug 184984

*bsdtar-2.2.4 (12 Jul 2007)

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> +bsdtar-2.2.4.ebuild:
  Bumpage.

  23 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/libarchive-1.2.53-strict-aliasing.patch,
  -files/libarchive-1.2.57-acl.patch,
  -files/libarchive-1.3.1-infiniteloop.patch, -bsdtar-1.3.1-r2.ebuild,
  -bsdtar-2.2.2.ebuild:
  Remove some old files.

  31 May 2007; Daniel Gryniewicz <dang@gentoo.org> bsdtar-2.0.31.ebuild:
  Marked stable on amd64 for bug #180017
