@@ -10,24 +10,19 @@ MD5 1dd8a4adb1851e0a84fa752b970ff445 files/libarchive-2.1.9-static.patch 1323
 RMD160 e69e1b894c9ce6d1a4098731d10ebedcd2a812c8 files/libarchive-2.1.9-static.patch 1323
 SHA256 6ab2eee004a6ec228acea4ceda9515c84edd9ca1187b8a918bef541d3dd9492d files/libarchive-2.1.9-static.patch 1323
 DIST libarchive-2.2.4.tar.gz 636879 RMD160 2aa2e4124c1081acfdc666335b659457dccb4fd6 SHA1 171c25a40f6cc3eee3be3343f2b9436b22368f18 SHA256 186d3aa24817f64b12cb0ff4c8b4a76df33921446b912ca015a05b66f8755df0
-DIST libarchive-2.3.5.tar.gz 698478 RMD160 0547786b802698b1f2a241c5dcb4bafcddda5477 SHA1 515472d42073ae427ca030797937cd715095cf0a SHA256 a04cc5664cac8e4b4a0848901073ef21b03fca3ab63fb9d7d09993fc0791f055
 DIST libarchive-2.4.0.tar.gz 791312 RMD160 fac39fc336dd6701c3c871c6634e2876239ef58c SHA1 b1d845e1c9e1631ba4b220627604832a14d84679 SHA256 edde790bdcae164a2f4abda5e3b34b6ad6c15c45b1d30d561bbb67bef4cd9724
 EBUILD libarchive-2.2.4.ebuild 1879 RMD160 58516de1505d655691f203043f08d39be2bac1f9 SHA1 d5fa91126fdfef5e7a2bf7e9942f3dac69c680a9 SHA256 29a4441e8e6be06f56bfcefdaf712c882d4497ecd69a291426d3ceff029b4e6e
 MD5 3f7521926bfb5cdc879f1d230768a03e libarchive-2.2.4.ebuild 1879
 RMD160 58516de1505d655691f203043f08d39be2bac1f9 libarchive-2.2.4.ebuild 1879
 SHA256 29a4441e8e6be06f56bfcefdaf712c882d4497ecd69a291426d3ceff029b4e6e libarchive-2.2.4.ebuild 1879
-EBUILD libarchive-2.3.5.ebuild 1919 RMD160 c58b1d9b96c49051b34f7e289e0489f237cd95cf SHA1 16cd022cf58eeb8bd15a74cb94f657f1234d977a SHA256 7811fbeb8e0b8fb489b88df4dad87bfcced1d81c6fc3552899511b36d70c388a
-MD5 ca87a388de77e1c1621929fdc53cd541 libarchive-2.3.5.ebuild 1919
-RMD160 c58b1d9b96c49051b34f7e289e0489f237cd95cf libarchive-2.3.5.ebuild 1919
-SHA256 7811fbeb8e0b8fb489b88df4dad87bfcced1d81c6fc3552899511b36d70c388a libarchive-2.3.5.ebuild 1919
-EBUILD libarchive-2.4.0.ebuild 1941 RMD160 1000922b9ff2cd7fbf775b56cd3073951cc39994 SHA1 7f45d4b5e48eac0c79075a5cf588620d1114c7d4 SHA256 92b1359dc5ddef0c65ac60ff9c76a92e0a8279eeb66a70ede655dc358600e170
-MD5 d476b5913c4ce9bb455e64580d459eb8 libarchive-2.4.0.ebuild 1941
-RMD160 1000922b9ff2cd7fbf775b56cd3073951cc39994 libarchive-2.4.0.ebuild 1941
-SHA256 92b1359dc5ddef0c65ac60ff9c76a92e0a8279eeb66a70ede655dc358600e170 libarchive-2.4.0.ebuild 1941
-MISC ChangeLog 13691 RMD160 79257a2b6e3a48c8f13ad8f29d934a06a8cc19d5 SHA1 e0365a6f5ee4ce5a86864a88bee308a76a182612 SHA256 e1ed6d1c687dd4c3c4075c937a10bcd0756ebf60086d3957d425a470d88fba25
-MD5 ade18239ce82ee7af67714df23770cdf ChangeLog 13691
-RMD160 79257a2b6e3a48c8f13ad8f29d934a06a8cc19d5 ChangeLog 13691
-SHA256 e1ed6d1c687dd4c3c4075c937a10bcd0756ebf60086d3957d425a470d88fba25 ChangeLog 13691
+EBUILD libarchive-2.4.0-r1.ebuild 1911 RMD160 cdea89930dd1f8e2eb44ab0fb5559951c3f5a8b0 SHA1 569357ea3acdbe86d3bb7ba4f4015f3cc5883ec4 SHA256 de2277eeb786241a54849e06f1c4ea24e0b1cadaa1ff4c740c39aef462693099
+MD5 ab89efc6163f961285888e1353d05c9b libarchive-2.4.0-r1.ebuild 1911
+RMD160 cdea89930dd1f8e2eb44ab0fb5559951c3f5a8b0 libarchive-2.4.0-r1.ebuild 1911
+SHA256 de2277eeb786241a54849e06f1c4ea24e0b1cadaa1ff4c740c39aef462693099 libarchive-2.4.0-r1.ebuild 1911
+MISC ChangeLog 13937 RMD160 d9c2d74bd4caf4f2210f6e528a8e354977e31b0c SHA1 b567aa1116dafae0697f1c7c6874da403e898fe2 SHA256 7007a95486a0f418a433380c64dc52e2bad2cea0922ec5ecd3698b0a12a131b1
+MD5 5a51eaa8f611952ac1f73e842b90d6c1 ChangeLog 13937
+RMD160 d9c2d74bd4caf4f2210f6e528a8e354977e31b0c ChangeLog 13937
+SHA256 7007a95486a0f418a433380c64dc52e2bad2cea0922ec5ecd3698b0a12a131b1 ChangeLog 13937
 MISC metadata.xml 337 RMD160 31dad5aaff39f6017382ea7c4f77ac229793c487 SHA1 c32d51164489ed68a27016c26aafae04b70ee447 SHA256 c82266892e94c9792cadf25c0ba9c4cf42d5279903e791b80e8f735ec91d923b
 MD5 abbe0170afef9b0f317830b41e537afa metadata.xml 337
 RMD160 31dad5aaff39f6017382ea7c4f77ac229793c487 metadata.xml 337
@@ -35,16 +30,13 @@ SHA256 c82266892e94c9792cadf25c0ba9c4cf42d5279903e791b80e8f735ec91d923b metadata
 MD5 53696d479c86b015e22391c32b61a9d0 files/digest-libarchive-2.2.4 250
 RMD160 454948c529e1df57ec59333b90a0f3836330ecee files/digest-libarchive-2.2.4 250
 SHA256 2ecca5a95f31cc517355482604cdb19437b11d7ec5ff2884dc8707c780791eeb files/digest-libarchive-2.2.4 250
-MD5 a2262de9b217839283e522d29b35a4bd files/digest-libarchive-2.3.5 250
-RMD160 9a2bec287f49836a7f1f92c9d944723482d63fbb files/digest-libarchive-2.3.5 250
-SHA256 824ccb21a3f9174b5078a3b0704a2e40927af45363b61d208b6f4b0e08a58e0b files/digest-libarchive-2.3.5 250
-MD5 25255d2ff2328999a08912800c47f659 files/digest-libarchive-2.4.0 250
-RMD160 14204d58c53b78ee9b302366203b2ef4053291f8 files/digest-libarchive-2.4.0 250
-SHA256 b81e1b3b3fc6748d2192e9aacfaeb264439a07feaa81ce8c59a502bb3c7fe457 files/digest-libarchive-2.4.0 250
+MD5 25255d2ff2328999a08912800c47f659 files/digest-libarchive-2.4.0-r1 250
+RMD160 14204d58c53b78ee9b302366203b2ef4053291f8 files/digest-libarchive-2.4.0-r1 250
+SHA256 b81e1b3b3fc6748d2192e9aacfaeb264439a07feaa81ce8c59a502bb3c7fe457 files/digest-libarchive-2.4.0-r1 250
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHLgZlAiZjviIA2XgRAvnrAKDZP5FlO6+BIeuCaagX0fq/FdoFyQCbBnWK
-3D4UtGk52QQgYEHvTq9t5r8=
-=XAMU
+iD8DBQFHMNPWAiZjviIA2XgRAmJkAKCzNHvkiwEpEjKvHWnR56NWZrTPsQCg0TL1
+sYOCgepIJyX4Xo9q5hb7ur4=
+=38p0
 -----END PGP SIGNATURE-----
