@@ -1,3 +1,0 @@
-MD5 954ed005e64c368d2ce890581b52b6fb libarchive-2.3.5.tar.gz 698478
-RMD160 0547786b802698b1f2a241c5dcb4bafcddda5477 libarchive-2.3.5.tar.gz 698478
-SHA256 a04cc5664cac8e4b4a0848901073ef21b03fca3ab63fb9d7d09993fc0791f055 libarchive-2.3.5.tar.gz 698478
