@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/libarchive-2.4.0.ebuild,v 1.1 2007/11/04 17:54:42 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/libarchive-2.4.0-r1.ebuild,v 1.1 2007/11/06 20:55:47 flameeyes Exp $
 
 inherit eutils autotools toolchain-funcs flag-o-matic
 
@@ -42,10 +42,8 @@ src_unpack() {
 src_compile() {
 	local myconf=
 
-	if use static || use build ; then
-		myconf="${myconf} --enable-static-bsdtar"
-	else
-		myconf="${myconf} --disable-static-bsdtar"
+	if ! use static && ! use build ; then
+		myconf="--enable-bsdtar=shared --enable-bsdcpio=shared"
 	fi
 
 	# Upstream doesn't seem to care to fix the problems
