@@ -1,6 +1,13 @@
 # ChangeLog for app-arch/libarchive
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.6 2007/11/04 17:54:42 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.7 2007/11/06 20:55:47 flameeyes Exp $
+
+*libarchive-2.4.0-r1 (06 Nov 2007)
+
+  06 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
+  -libarchive-2.3.5.ebuild, -libarchive-2.4.0.ebuild,
+  +libarchive-2.4.0-r1.ebuild:
+  Fix linking of shared libarchive, thanks to Jan Psota for reporting.
 
 *libarchive-2.4.0 (04 Nov 2007)
 
